--- a/Create_ET_ASD/ET_ASD.ipynb
+++ b/Create_ET_ASD/ET_ASD.ipynb
@@ -88,8 +88,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
+   "id": "75b91af7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asd_np =asd\n",
+    "gps_times_np = 1.126e+9\n",
+    "detector = \"H1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "d4dd11d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "if asd_np.ndim == 1:\n",
+    "    asd_np = asd_np[None, :]\n",
+    "\n",
+    "if np.isscalar(gps_times_np):\n",
+    "    gps_times_np = np.array([gps_times_np], dtype=float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bde0920e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,45 +125,29 @@
     "import numpy as np\n",
     "from dingo.core.utils.misc import get_version\n",
     "\n",
-    "# -------------------------\n",
-    "# Your existing ASD data\n",
-    "# -------------------------\n",
-    "asd_np = asd       # (N_freq,) or (N_asd, N_freq)\n",
-    "\n",
-    "N_freq = asd_np.shape[-1]\n",
-    "\n",
-    "df = 1.0 / 2.0\n",
-    "freqs_np = np.arange(N_freq) * df\n",
-    "\n",
-    "\n",
-    "\n",
-    "if asd_np.ndim == 1:\n",
-    "    asd_np = asd_np[None, :]\n",
-    "\n",
-    "# -------------------------\n",
-    "# Build DINGO save dict\n",
-    "# -------------------------\n",
-    "save_dict = {\n",
-    "    \"asd\": asd_np.astype(np.float64),\n",
-    "    \"frequencies\": freqs_np.astype(np.float64),\n",
-    "    \"detectors\": [\"ET1\"],     # MUST be a list, even for one detector\n",
-    "    \"version\": f\"dingo={get_version()}\",\n",
-    "}\n",
+    "detector = \"H1\"\n",
     "\n",
     "settings = {\n",
-    "    \"f_min\": float(freqs_np.min()),\n",
-    "    \"f_max\": float(freqs_np.max()),\n",
-    "    \"detectors\": [\"ET1\"],\n",
+    "    \"domain_dict\": {\n",
+    "        \"f_s\": 4096.0,\n",
+    "        \"T\": 2.0,\n",
+    "        \"f_min\": 6.0,\n",
+    "        \"f_max\": 512.0,\n",
+    "        \"window_factor\": 1.0\n",
+    "    }\n",
     "}\n",
     "\n",
-    "# -------------------------\n",
-    "# Write HDF5\n",
-    "# -------------------------\n",
-    "with h5py.File(\"asds.hdf5\", \"w\") as f:\n",
-    "    from dingo.core.dataset import recursive_hdf5_save\n",
-    "    recursive_hdf5_save(f, save_dict)\n",
+    "with h5py.File(\"asds_ET.hdf5\", \"w\") as f:\n",
     "\n",
-    "    f.attrs[\"dataset_type\"] = \"asd_dataset\"\n",
+    "    asds_grp = f.create_group(\"asds\")\n",
+    "    gps_grp  = f.create_group(\"gps_times\")\n",
+    "\n",
+    "    asds_grp.create_dataset(detector, data=asd_np)\n",
+    "    gps_grp.create_dataset(detector, data=gps_times_np)\n",
+    "\n",
+    "    f.create_dataset(\"version\", data=f\"dingo={get_version()}\")\n",
+    "\n",
+    "    # THIS IS THE MISSING PIECE\n",
     "    f.attrs[\"settings\"] = str(settings)\n"
    ]
   }
